WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54686
Web and/or plug-in process crashes when NPN_Evaluate destroys the plug-in
https://bugs.webkit.org/show_bug.cgi?id=54686
Summary
Web and/or plug-in process crashes when NPN_Evaluate destroys the plug-in
Anders Carlsson
Reported
2011-02-17 13:38:55 PST
Web and/or plug-in process crashes when NPN_Evaluate destroys the plug-in
Attachments
Patch
(13.20 KB, patch)
2011-02-17 13:45 PST
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-17 13:45:53 PST
Created
attachment 82857
[details]
Patch
Anders Carlsson
Comment 2
2011-02-17 13:50:17 PST
Committed
r78915
: <
http://trac.webkit.org/changeset/78915
>
mitz
Comment 3
2011-02-20 11:30:20 PST
<
rdar://problem/9013384
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug